--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
   height: 800px;
   width: 720px;
   background-image: url("/public/intro-bg.jpg");
-  background-size: cover; /* Optional: makes the image cover the div */
+  background-size: cover; 
   position: absolute;
   z-index: -1;
   right: 0;
@@ -118,31 +118,119 @@
   list-style: none;
 }
 
-#about-text{
-  height: 700px;
-  margin-left:100px;
-  margin-top:50px;
+#about-text {
+  height: 50px;
+  margin-left: 100px;
+  margin-top: 50px;
   font-size: 25px;
-  font-family: 'Times New Roman', Times, serif;
+  font-family: "Times New Roman", Times, serif;
   font-weight: bold;
+  margin-right: 300px;
 }
 
 #about1 {
-  background-image: url("/public/about1.jpg");
- width:300px;
- height:300px;
-background-size: cover;
-  margin-top:-500px;
-  margin-left:1000px;
+  background-image: url("/public/about4.jpg");
+  width: 200px;
+  height: 200px;
+  background-size: cover;
+  margin-left: 670px;
+  z-index: -1;
+  position: absolute;
+  margin-top: -390px;
+  border-radius: 200px;
 }
-
 
 #about2 {
   background-image: url("/public/about2.jpg");
-   width:300px;
- height:300px;
- background-size: cover;
-  margin-top:-800px;
-  margin-left:800px;
+  width: 300px;
+  height: 300px;
+  background-size: cover;
+  margin-left: 680px;
+  border-radius: 200px;
+}
 
+#about3 {
+  background-image: url("/public/about3.jpg");
+  width: 600px;
+  height: 400px;
+  background-size: cover;
+  margin-left: 770px;
+  margin-top: -600px;
+  z-index: -2;
+  position: absolute;
+  border-radius: 200px;
+}
+
+#about4 {
+  background-image: url("/public/about5.jpg");
+  width: 400px;
+  height: 400px;
+  background-size: cover;
+  margin-left: 580px;
+  margin-top: -570px;
+  z-index: -3;
+  position: absolute;
+  border-radius: 200px;
+}
+
+#about5 {
+  background-image: url("/public/about6.jpg");
+  width: 300px;
+  height: 300px;
+  background-size: cover;
+  margin-left: 1200px;
+  border-radius: 200px;
+  margin-top: -300px;
+}
+#about6 {
+  background-image: url("/public/about7.jpg");
+  width: 400px;
+  height: 400px;
+  background-size: cover;
+  margin-left: 894px;
+  border-radius: 200px;
+  margin-top: -240px;
+  z-index: -4;
+  position: absolute;
+}
+
+#section3 {
+  background-color: rgb(212, 214, 212);
+  width: auto;
+  height: 800px;
+  display: flex;
+}
+
+.sec {
+  padding: 30px;
+  width: 200px;
+  width: 400px;
+
+  color: rgb(41, 62, 62);
+}
+.list-head {
+  font-size: 35px;
+}
+.span {
+  color: #daa520;
+}
+.list {
+  font-size: 20px;
+}
+.list h4 {
+  margin-bottom: 4px; 
+  color: #403a2a;
+}
+
+.list p {
+  margin-top: 0; 
+}
+li {
+  list-style: none;
+}
+
+#section4 {
+  background-color: rgb(255, 255, 255);
+  width: auto;
+  height: 300px;
 }
